--- a/View/HomeView.xaml
+++ b/View/HomeView.xaml
@@ -5,10 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CoinViewer.View"
              mc:Ignorable="d" 
-             d:DesignHeight="200"
-             d:DesignWidth="200"
-             Background="blue">
-    <Grid>
-            
+             d:DesignHeight="600"
+             d:DesignWidth="622"
+             Background="Transparent"
+             Style="{StaticResource Page_Style}">
+
+
+    <Grid Margin="15" Background="Blue">
+
     </Grid>
+    
 </UserControl>
