--- a/App.xaml
+++ b/App.xaml
@@ -14,6 +14,8 @@
                 <ResourceDictionary Source="/Styles/Text.xaml"/>
                 <ResourceDictionary Source="/Styles/Image.xaml"/>
                 <ResourceDictionary Source="/Styles/Page.xaml"/>
+                <ResourceDictionary Source="/Styles/TextBox.xaml"/>
+                <ResourceDictionary Source="/Styles/Button.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
 
