--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -35,26 +35,43 @@
                 <RowDefinition Height="100"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
+            
+            <!-- Logo -->
 
             <Grid>
 
                 <Border CornerRadius="20,0,0,0"
-                        Background="#272B2F">
+                        Background="#272B2F"/>
 
-                    <TextBlock Text="CoinViewer"
+                <TextBlock Text="CoinViewer"
                    Style="{StaticResource Text_Style}"
                            FontSize="25"
                            Margin="30,0,0,0"/>
 
-                </Border>
-
-
             </Grid>
 
+            <!-- Search Pannel -->
+            
+            <Grid Grid.Column="1">
+
+                <TextBox HorizontalAlignment="Left"
+                         Margin="15,0,0,0"
+                         Style="{StaticResource Text_Box_Style}"/>
+
+                <Button x:Name="CloseApp"
+                Style="{StaticResource ExitApp}"
+                Click="CloseApp_Click" />
+
+            </Grid>
+            
+            <!-- Navigation -->
+            
             <Grid HorizontalAlignment="Left"
                   Width="228"
-                  Grid.Row="1"
-                  Background="#272B2F">
+                  Grid.Row="1">
+
+                <Border CornerRadius="0,0,0,20"
+                        Background="#272B2F"/>
 
                 <StackPanel>
 
@@ -92,7 +109,9 @@
                 </StackPanel>
 
             </Grid>
-
+            
+            <!-- Content -->
+            
             <ContentControl Grid.Column="1"
                             Grid.Row="1"
                             Content="{Binding CurrentView}"/>
