--- a/App.xaml
+++ b/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="/Styles/Page.xaml"/>
                 <ResourceDictionary Source="/Styles/TextBox.xaml"/>
                 <ResourceDictionary Source="/Styles/Button.xaml"/>
+                <ResourceDictionary Source="/Styles/Datagrid.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
 
