--- a/Styles/DataGrid.xaml
+++ b/Styles/DataGrid.xaml
@@ -1,8 +1,37 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Style x:Key="Datagrid_Row_Style"
+           TargetType="DataGridRow">
+
+        <Style.Triggers>
+
+            <Trigger Property="IsMouseOver"
+                     Value="True">
+
+                <Setter Property="Background"
+                        Value="#006072"/>
+                
+
+            </Trigger>
+
+            <Trigger Property="IsMouseOver"
+                     Value="False">
+
+                <Setter Property="Background"
+                        Value="#272B2F"/>
+
+            </Trigger>
+
+        </Style.Triggers>
+
+    </Style>
+
     <Style x:Key="Datagrid_Header_Style"
            TargetType="DataGridColumnHeader">
+
+        <Setter Property="Padding"
+                Value="5,0,0,0"/>
 
         <Setter Property="Background"
                 Value="#272B2F"/>
@@ -23,9 +52,6 @@
 
     <Style x:Key="Datagrid_Cell_style"
            TargetType="DataGridCell">
-
-        <Setter Property="Background"
-                Value="#272B2F"/>
 
         <Setter Property="BorderThickness"
                 Value="0"/>
@@ -52,14 +78,16 @@
 
             <Trigger Property="IsSelected"
                      Value="True">
+
                 <Setter Property="Background"
-                        Value="#272B2F"/>
-                
+                        Value="#006072"/>
+
                 <Setter Property="FontFamily"
                 Value="/Fonts/#Rubik"/>
 
                 <Setter Property="Foreground"
                 Value="#DBDBDB" />
+
             </Trigger>
 
         </Style.Triggers>
