--- a/Styles/TextBox.xaml
+++ b/Styles/TextBox.xaml
@@ -3,58 +3,37 @@
 
     <Style TargetType ="{x:Type TextBox}" 
            x:Key="Search_Box_Style">
-        
-        <Setter Property="Template">
-            
-            <Setter.Value>
-                
-                <ControlTemplate TargetType="{x:Type TextBox}">
-                    
-                    <Border CornerRadius="10" 
-                            Background="#353340" 
-                            Width="200" 
-                            Height="40"
-                            Margin="20,0,0,0">
-                        
-                        <Grid>
-                            
-                            <TextBox Margin="1" Text="{TemplateBinding Text}" BorderThickness="0"
-                                     Background="Transparent" VerticalContentAlignment="Center"
-                                     Padding="5" Foreground="#CFCFCF" x:Name="Searchbox"
-                                     FontSize="20"/>
 
-                            <TextBlock IsHitTestVisible="False" Text="Search Coin" 
-                                       VerticalAlignment="Center" HorizontalAlignment="Left"
-                                       Margin="10,0,0,0" FontSize="11" Foreground="DarkGray"
-                                       Grid.Column="1">
+        <Setter Property="Text"
+                Value="Search"/>
 
-                                <TextBlock.Style>
-                                    <Style TargetType="{x:Type TextBlock}">
-                                        
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Text, ElementName=Searchbox}"
-                                                         Value="">
-                                                <Setter Property="Visibility" Value="Visible"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                        
-                                        <Setter Property="Visibility" Value="Hidden"/>
-                                        
-                                    </Style>
-                                </TextBlock.Style>
+        <Setter Property="HorizontalAlignment"
+                Value="Left"/>
 
-                            </TextBlock>
+        <Setter Property="Margin"
+                Value="15,0,0,0"/>
 
-                        </Grid>
-                        
-                    </Border>
-                    
-                </ControlTemplate>
-                
-            </Setter.Value>
-            
-        </Setter>
-        
+        <Setter Property="Width"
+                Value="200"/>
+
+        <Setter Property="Height"
+                Value="20"/>
+
+        <Setter Property="Foreground"
+                Value="#DBDBDB"/>
+
+        <Setter Property="FontFamily"
+                Value="/Fonts/#Rubik"/>
+
+        <Setter Property="FontSize"
+                Value="18"/>
+
+        <Setter Property="Background"
+                Value="#272B2F"/>
+
+        <Setter Property="BorderThickness"
+                Value="0"/>
+
     </Style>
 
 </ResourceDictionary>
