--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -36,7 +36,7 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             
-            <!-- Logo -->
+            <!-- Logo  And shutdown -->
 
             <Grid>
 
@@ -50,8 +50,6 @@
 
             </Grid>
 
-            <!-- Search Pannel -->
-            
             <Grid Grid.Column="1">
 
                 
