--- a/View/DetailsView.xaml
+++ b/View/DetailsView.xaml
@@ -5,10 +5,103 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CoinViewer.View"
              mc:Ignorable="d" 
-             d:DesignHeight="200"
-             d:DesignWidth="200"
+             d:DesignHeight="600"
+             d:DesignWidth="622"
              Style="{StaticResource Page_Style}">
-    <Grid Margin="15" Background="Green">
+    
+    <Grid Margin="15" Background="Transparent">
+
+        <Grid Margin="20">
+
+            <Border CornerRadius="20"
+                    Background="#272B2F"/>
+
+            <Grid Margin="50">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Text="Name: "
+                           Style="{StaticResource Text_Style}"
+                           Margin="0"/>
+                <TextBlock x:Name="coin_name"
+                           Grid.Column="1"
+                           Style="{StaticResource Text_Style}"
+                           Margin="-50"/>
+
+                <TextBlock Text="Symbol: "
+                           Grid.Row="1"
+                           Style="{StaticResource Text_Style}"
+                           Margin="0"/>
+                <TextBlock x:Name="coin_symbol"
+                           Grid.Column="1"
+                           Grid.Row="1"
+                           Style="{StaticResource Text_Style}"
+                           Margin="-50"/>
+
+                <TextBlock Text="Price USD:"
+                           Grid.Row="2"
+                           Style="{StaticResource Text_Style}"
+                           Margin="0"/>
+                <TextBlock x:Name="coin_priceUSD"
+                           Grid.Column="2"
+                           Grid.Row="2"
+                           Style="{StaticResource Text_Style}"
+                           Margin="-50"/>
+
+                <TextBlock Text="Price change:"
+                           Grid.Row="3"
+                           Style="{StaticResource Text_Style}"
+                           Margin="0"/>
+                <TextBlock x:Name="coin_change24H"
+                           Grid.Column="1"
+                           Grid.Row="3"
+                           Style="{StaticResource Text_Style}"
+                           Margin="-50"/>
+
+                <TextBlock Text="Coin rank: "
+                           Grid.Row="4"
+                           Style="{StaticResource Text_Style}"
+                           Margin="0"/>
+                <TextBlock x:Name="coin_rank"
+                           Grid.Column="1"
+                           Grid.Row="4"
+                           Style="{StaticResource Text_Style}"
+                           Margin="-50"/>
+
+                <TextBlock Text="Coin supply: "
+                           Grid.Row="5"
+                           Style="{StaticResource Text_Style}"
+                           Margin="0"/>
+                <TextBlock x:Name="coin_supply"
+                           Grid.Column="1"
+                           Grid.Row="5"
+                           Style="{StaticResource Text_Style}"
+                           Margin="-50"/>
+
+                <TextBlock Text="Coin max supply: "
+                           Grid.Row="6"
+                           Style="{StaticResource Text_Style}"
+                           Margin="0"/>
+                <TextBlock x:Name="coin_max_supply"
+                           Grid.Column="1"
+                           Grid.Row="6"
+                           Style="{StaticResource Text_Style}"
+                           Margin="-50"/>
+            </Grid>
             
+        </Grid>
     </Grid>
 </UserControl>
