--- a/View/HomeView.xaml
+++ b/View/HomeView.xaml
@@ -13,7 +13,7 @@
 
     <Grid Margin="15" Background="Transparent">
 
-        <Grid Margin="35,-600,0,0"
+        <Grid Margin="20,-570,0,0"
                       Height="40"
                       Width="200"
                       HorizontalAlignment="Left">
@@ -43,7 +43,8 @@
                       GridLinesVisibility="None"
                       Margin="20"
                       CanUserAddRows="False"
-                      RowStyle="{StaticResource Datagrid_Row_Style}">
+                      RowStyle="{StaticResource Datagrid_Row_Style}"
+                      MouseLeftButtonUp="DataGridCoins_MouseLeftButtonUp">
 
                 <DataGrid.Columns>
 
