--- a/View/HomeView.xaml
+++ b/View/HomeView.xaml
@@ -13,6 +13,20 @@
 
     <Grid Margin="15" Background="Transparent">
 
+        <Grid Margin="-50,-570,0,0"
+              Height="40"
+              Width="40">
+
+            <Border CornerRadius="10"
+                    Background="#272B2F"
+                    x:Name="refresh_border"/>
+
+            <Image Source="/Images/img_refresh.png"
+                   Margin="7"
+                   MouseLeftButtonUp="Image_MouseLeftButtonUp"/>
+
+        </Grid>
+
         <Grid Margin="20,-570,0,0"
                       Height="40"
                       Width="200"
